<resources>
    <string name="app_name">FitnessApp</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_your_weight">Enter Your Weight</string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_height">Enter Your Height</string>
    <string name="save">SAVE</string>

    <string-array name="workout_plan">
        <item>I want to be stronger</item>
        <item>I want to be fit</item>
        <item>I want to maintain my condition</item>
    </string-array>

    <string-array name="diet_plan">
        <item>I want to lose weight</item>
        <item>I want to gain weight</item>
        <item>I want to maintain my weight</item>
    </string-array>

    <string-array name="cardio_plan">
        <item>I want to be stronger</item>
        <item>I want to be fit</item>
        <item>I want to maintain my condition</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="next">next</string>
    <string name="fitnessnedir">Sağlıklı bir vücuda sahip olmayı dileyen birçok kişi önce fitness yapmayı düşünür. Ancak çoğu kimse Fitness ne işe yarar? sorusunun cevabını tam olarak bilememektedir. Fitness, çoğu zaman vücut geliştirme antrenmanlarıyla karıştırılır. Vücut geliştirmede temel amaç, kas hacminin ve kütlesinin artırılması iken fitness vücudun daha fit görünmesine imkan sağlar. Sağlıklı bir hayata sahip olmak ve vücudun formda kalmasını sağlamak için yapılan egzersizler olarak tanımlanan fitness, vücuttaki yağların yakılmasına yardımcı olur. Bu antrenmanlarda kasların hacim alması değil, sıkılaşması ön plana çıkar. Daha ince ve daha esnek bir vücuda sahip olmana olanak tanıyan fitness antrenmanları, fiziksel sağlığın yanı sıra ruhsal sağlığa da büyük faydalar sunar. Kemik ve kas sistemini güçlendiren fitness, düzenli olarak yapıldığında etkisini kısa sürede gösterir. Vücudun kalori yakmasına olanak tanıyan antrenmanlar kilo verme sürecini de hızlandırır. Birçok problemin çözümüne yardımcı olan fitness, zihinsel ve ruhsal olarak da kendini geliştirebilmene imkan tanır.</string>
    <string name="fitnessfaydalari">Fitness egzersizleri, vücut kaslarının neredeyse hepsinin kullanılmasına yardımcı olur. Antrenmanlar düzenli olarak yapıldığında ise vücuda büyük faydalar sağlar. Kemik ve kas sistemini büyük ölçüde güçlendiren fitness egzersizleri, kardiyo ve ağırlık egzersizleriyle birlikte oluştuğundan metabolizmanın hızlanmasına yardımcı olur. Bu egzersizlerle birlikte vücut kalori yakar ve kilo verme süreci hızlanır. Sırt ve karın kaslarını çalıştıran egzersizler duruş bozukluğu gibi problemlerin ortadan kaldırılmasına da katkı sunar. Egzersizler nefes alıp vermeyi düzenler, vücuttaki toksinlerin atılmasına olanak tanır. Aynı zamanda fitness kan basıncını düzenler, tansiyon ve kalp-damar hastalıkları riskini azaltır. Vücuda sunduğu yararların yanı sıra fitness ruhsal gelişime de katkı sağlar. Serotonin salgılanmasını artıran fitness, yaşanılanlara daha pozitif bir bakış açısıyla bakabilmene imkan tanır. Zihinsel açıdan gelişebilmene de yardımcı olan fitness, uykundan daha fazla verim alabilmene, öz güvenini artırmana da olanak sağlar.</string>
    <string name="duzenlibeslenme">Yeterli ve dengeli beslenmek beden ve ruh sağlığımız için büyük öneme sahiptir. Beslenmek sadece açlık duygusunu bastırmak anlamını taşımamaktadır. Beslenmek yaşam kalitesini yükseltmek, sağlığı korumak ve geliştirmek anlamlarını da taşır. Besinleri yeterli ve dengeli bir şekilde tükettiğimiz zaman birçok faydayı vücudumuzda hissetmeye başlarız. Dengeli ve yeterli bir şekilde beslenmenin faydaları arasında; daha az hastalanmak, sağlıklı bir zihin, kuvvetli kaslar, canlı ve parlak saçlar, hareketli ve esnek bir beden, sağlıklı bir görünüm ve dahası yer almaktadır. Peki yeterli ve dengeli beslenme nedir? Vücut sağlığımız için farklı besin gruplarına ihtiyaç duyarız. Dengeli ve yeterli bir şekilde beslenilmediği zaman ise vücudun bazı dengeleri bozulur. Peki dengeli beslenme içerisinde yer alan besin grupları nelerdir? Bu besin grupları; mineraller, su, vitaminler, yağlar, karbonhidratlar ve proteinlerdir. Bu besin gruplarından alınması gereken miktar genetiğe, fiziksel aktiviteye, yaşa ve cinsiyete göre farklılık gösterebilir. Peki dengeli beslendiğimiz zaman ruh ve beden sağlığımızda ne gibi etkiler ortaya çıkar? Ve besin çeşitlerinin bizlere olan faydaları nelerdir? İşte cevapları…</string>
    <string name="karbonhidrat">Besin çeşitleri arasında oldukça önemli bir yere sahip olan karbonhidratların ana görevi enerji sağlamasıdır. Gün içinde harcadığımız enerji karbonhidratlar tarafından sağlanır. Karbonhidratlar dengeli bir şekilde tüketilmek kaydıyla kişi enerjik hisseder. Tabii ki karbonhidratların tek faydası bu değildir. Bu faydalar ile birlikte ısı ve enerji gereksinimi karşılanır, basit şekerlerden biri olan glikoz ile sinir sistemi ve beyine temel enerji kaynağı sağlanır, elektrolit ve su dengesi sağlanır.</string>
    <string name="protein">Proteinler amino asitlerin zincir halinde birbirine bağlanması sonucu oluşan organik maddelerdir. Beslenme düzeninde proteinlere gereken önemi vermek sağlıklı ve güçlü bir vücut için olmazsa olmazdır. Çünkü proteinler kasların onarılmasına yardımcı olurlar, kas inşa ederler, kişiyi tok hissettirerek zararlı şeylerin yenmesini engellerler ve kan şekerini düşürürler.</string>
    <string name="vitamin">Vitaminler vücudumuzun sağlıklı bir şekilde işlevini devam ettirmesi, hastalıklara karşı mücadele etmesi ve güçlü bir bağışıklığa sahip olması için büyük öneme sahiptir. Vitaminler vücudumuz tarafından üretilmezler. Bu yüzden vitaminleri besinlerden almamız gerekir. Sağlıklı bir vücut için 13 önemli vitamin bulunmaktadır. Bu vitaminler yağda ve suda eriyen vitaminler olarak ikiye ayrılırlar. Suda çözünen vitaminler vücutta depolanmadığı için günlük olarak tüketilmelidir. Yağda çözünen vitaminlerin vücut tarafından emilebilmeleri için yağ gereklidir. Her vitamin beden ve ruh sağlığımız için farklı faydaya sahiptir. Örneğin A vitamini büyüme, iskelet gelişimi, emzirme ve sinir sistemi için oldukça önemliyken, C vitamini demir emilimine yardımcı olmak, dokuların büyümesi ve onarılmasını desteklemek gibi etkilere sahiptir. Bu yüzden her vitamin grubundan besin yeterli oranda tüketilmelidir.</string>
    <string name="mineral">Doğada yaygın bir şekilde bulunan mineraller kristal yapıdaki inorganik maddelerdir. Mineraller vücut için hayati öneme sahiptir. Mineraller ile büyüme ve gelişme, vücut fonksiyonlarının düzenlenmesi ve çalışması için kaynak sağlanır. Mineraller arasında kalsiyum, sodyum, demir, çinko, fosfor, magnezyum, potasyum, krom, iyot, bakır gibi çeşitler bulunur. Tabii ki minerallerin tek etkisi bunlar değildir. Sağlıklı ve güçlü bir kemik yapısı, genç kalma, hücre gelişimi ve yenilenmesi minerallerin dahil olduğu noktalardandır.</string>
    <string name="yaglar">Yağların vücudumuzda yeterli oranda bulunması birçok faydayı da beraberinde getirir. Tabii ki vücudun enerji kullanımı için sınırsız derecede yağ depolayabileceği de unutulmamalıdır. Yağların faydalarına ve görevlerine baktığımız zaman ise vitaminlerin emilimini sağlamak, vücut ısısını korumak, enerji sağlamak, derinin sağlıklı olmasını sağlamak, sindirim sistemine yardımcı olmak gibi faydaları görürüz.</string>
    <string name="su">İnsan vücudunun %50 ile %75’i sudan oluşmaktadır. Su hücrelerin temel yapı taşıdır. Bu yüzden oldukça büyük öneme sahiptir. Su ile vücudun ısısı düzenlenir, protein ve karbonhidratlar metabolize edilir, toksinlerin atılmasına yardımcı olunur, oksijen ve besinlerin hücrelere taşınmasına yardımcı edilir. Bu yüzden gün içinde 2 ile 2,5 litre su tüketmek büyük öneme sahiptir.</string>
    <string name="cardio">İnsanlar genellikle fit bir vücuda sahip olmanın dış görünüşle ilgili olduğunu düşünürler. Fiziksel aktivitenin dış görünüşte yarattığı değişiklikler, insanları egzersize devam etme konusunda motive eden en önemli unsurlar arasında yer alır. Fakat vücudumuzun içindeki değişimlerin büyük bir kısmı egzersiz programına başlamamızla birlikte ortaya çıkar. Kardiyorespiratuar egzersiz yani kardiyo olarak da bilinen egzersizler, kalp ve dolaşım sistemini harekete geçirirler. Bu egzersizler kalp güçlendirme antrenmanı olarak da tanımlanabilir.</string>
    <string name="cardio_one">Hayatta kalabilmemiz için kalp ve dolaşım sistemimizin her an çalışması gerekiyor. Kardiyo egzersizleri de bu yaşamsal sistemin daha iyi çalışmasını sağlıyor. Koşu, bisiklet ve yüzme gibi egzersizler bu açıdan mükemmel örneklerdir. Kalbimiz kaslardan oluşur ve bu egzersizler kalbin kan pompalama kabiliyetini artırmaya yardımcı olur.</string>
    <string name="cardio_two">Egzersiz sırasında kalbiniz daha hızlı kan pompaladığı için daha fazla çalışır. Bunun sonucunda, genel anlamda kan pompalama etkinliği giderek artar. Bu sayede, kalbiniz daha az yorulacağı için günlük faaliyetlerinizi daha kolay yapmaya başlarsınız. Bu değişimi, dinlenirken nabzınızda meydana gelen düşüşten anlayabilirsiniz.</string>
    <string name="cardio_three">Kardiyo egzersizleriyle aktivite seviyenizi artırdığınızda, enerji ihtiyacınız da artar ve buna bağlı olarak vücudunuz ekstra yakıta ihtiyaç duyar. Uzun süreli kardiyo egzersizlerinde, temel yakıt kaynağı olarak vücutta depolanan yağ kullanılır. Harcanan enerjide meydana gelen artışla birlikte kalori alımının da sınırlanması halinde, kayda değer ölçüde kilo verilmesi mümkün olacaktır.</string>
    <string name="cardio_four">Kardiyo egzersizleri, beyninizin mutluluk hissini artıran endorfin hormonunun üretilmesini destekler.Bu fonksiyon genellikle ‘koşudan kaynaklı coşku’ olarak ifade edilse de, tenis veya yürüyüş de aynı hissi yaratabilir. Kardiyo egzersizi genellikle hareket halinde meditasyon hissi yaratır. Tamamen egzersize odaklandığınızda, stres seviyenizde düşüş meydana gelebilecektir. Egzersizi bitirdiğinizde fiziksel olarak yorulmuş olabilirsiniz ancak zihinsel açıdan canlandığınızı hissedersiniz.</string>
</resources>